cmake_minimum_required(VERSION 2.9)
project(LeetCodeWIthCpp)


set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
set(CMAKE_CXX_STANDARD 20)
add_executable(LeetCodeWIthCpp main.cpp)
add_executable(lengthOfLongestSubstring 3.lengthOfLongestSubstring.cpp)
add_executable(twoSum 1.twoSum.cpp)
add_executable(minMoves 453.minMoves.cpp)
add_executable(WordDictionary 211.WordDictionary.cpp)
add_executable(findMedianSortedArrays 4.findMedianSortedArrays.cpp)
add_executable(plusOne 66.plusOne.cpp)
add_executable(fib 509.fib.cpp)
add_executable(majorityElement 229.majorityElement.cpp)
add_executable(searchMatrix 240.searchMatrix.cpp)
add_executable(tribonacci 1137.tribonacci.cpp)
add_executable(climbStairs 70.climbStairs.cpp)
add_executable(minCostClimbingStairs 746.minCostClimbingStairs.cpp)
add_executable(rob 198.rob.cpp)
add_executable(rob2 213.rob.cpp)
add_executable(nextGreaterElement 496.nextGreaterElement.cpp)
add_executable(deleteAndEarn 740.deleteAndEarn.cpp)
add_executable(removeInvalidParentheses 301.removeInvalidParentheses.cpp)
add_executable(deleteNode 237.deleteNode.cpp)
add_executable(longestSubsequence 1218.longestSubsequence.cpp)
add_executable(managearray ManageArray.cpp ManageArray.h)
add_executable(maxCount 598.maxCount.cpp)
add_executable(missingNumber 268.missingNumber.cpp)
add_executable(findMinStep 488.findMinStep.cpp)
add_executable(kInversePairs 629.kInversePairs.cpp)
add_executable(originalDigits 423.originalDigits.cpp)
add_executable(searchBST 700.searchBST.cpp)
add_executable(removePalindromeSub 1332.removePalindromeSub.cpp)
add_executable(minJumps 1345.minJumps.cpp)
add_executable(StockPrice 2034.StockPrice.cpp)