add_executable(03.CQueue 03.CQueue.cpp)
add_executable(30.MinStack 30.MinStack.cpp)
add_executable(35.copyRandomList 35.copyRandomList.cpp)
add_executable(47.maxValue 47.maxValue.cpp)
add_executable(46.translateNum 46.translateNum.cpp)
add_executable(48.lengthOfLongestSubstring 48.lengthOfLongestSubstring.cpp)