add_executable(03.CQueue 03.CQueue.cpp)
add_executable(30.MinStack 30.MinStack.cpp)
add_executable(35.copyRandomList 35.copyRandomList.cpp)
add_executable(47.maxValue 47.maxValue.cpp)
add_executable(46.translateNum 46.translateNum.cpp)
add_executable(48.lengthOfLongestSubstring 48.lengthOfLongestSubstring.cpp)
add_executable(58.1.reverseWords 58.1.reverseWords.cpp)
add_executable(12.exist 12.exist.cpp)
add_executable(41.MedianFinder 41.MedianFinder.cpp)
add_executable(53.1.search 53.1.search.cpp)
add_executable(57.twoSum 57.twoSum.cpp)
add_executable(56.1.singleNumbers 56.1.singleNumbers.cpp)
add_executable(56.2.singleNumber 56.2.singleNumber.cpp)
add_executable(39.majorityElement 39.majorityElement.cpp)
add_executable(66.constructArr 66.constructArr.cpp)
add_executable(14.1.cuttingRope 14.1.cuttingRope.cpp)
add_executable(59.maxSlidingWindow 59.maxSlidingWindow.cpp)
add_executable(59.MaxQueue 59.MaxQueue.cpp)
add_executable(38.permutation 38.permutation.cpp)